crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__softmax_config_with_temperature.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: cfg
---
SoftmaxConfig {
    n_cols: 256,
    n_rows: 16,
    threads_per_block: 256,
    temperature: 0.5,
    causal_mask: false,
    mode: Standard,
    in_place: false,
}
