crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__stage_result_cpu_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: result
---
StageResult {
    stage: Attention,
    output_shape: [
        1,
        128,
        768,
    ],
    execution_time_ns: 5000000,
    used_gpu: false,
    fallback_triggered: false,
}
