crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__tile_config_custom.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: cfg
---
TileConfig {
    tile_m: 48,
    tile_n: 96,
    tile_k: 32,
}
