crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__tile_config_default.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: cfg
---
TileConfig {
    tile_m: 64,
    tile_n: 64,
    tile_k: 64,
}
