crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__tile_config_large.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: cfg
---
TileConfig {
    tile_m: 128,
    tile_n: 128,
    tile_k: 128,
}
