crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__tile_config_small.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: cfg
---
TileConfig {
    tile_m: 32,
    tile_n: 32,
    tile_k: 32,
}
